local/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: livinvicta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: livinvicta-registry:5000/fraguinha/livinvicta.com-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: livinvicta
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
