local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livinvicta-ingress
  namespace: livinvicta
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
